--- a/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -52,6 +52,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\AddressConverter.cs" />
+    <Compile Include="Converters\QuoteItemConverter.cs" />
+    <Compile Include="Converters\AttachmentConverter.cs" />
+    <Compile Include="Converters\QuoteRequestConverter.cs" />
+    <Compile Include="Converters\TierPriceConverter.cs" />
+    <Compile Include="Migrations\201509110838465_Initial.cs" />
+    <Compile Include="Migrations\201509110838465_Initial.Designer.cs">
+      <DependentUpon>201509110838465_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\AddressEntity.cs" />
     <Compile Include="Model\AttachmentEntity.cs" />
     <Compile Include="Model\QuoteItemEntity.cs" />
@@ -60,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IQuoteRepository.cs" />
     <Compile Include="Repositories\QuoteRepositoryImpl.cs" />
+    <Compile Include="Services\QuoteRequestServiceImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\VirtoCommerce.Platform.Core\VirtoCommerce.Platform.Core.csproj">
@@ -79,10 +90,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Converters\" />
-    <Folder Include="Migrations\" />
-    <Folder Include="Services\" />
+    <EmbeddedResource Include="Migrations\201509110838465_Initial.resx">
+      <DependentUpon>201509110838465_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
