--- a/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -61,6 +61,14 @@
     <Compile Include="Migrations\201509110838465_Initial.Designer.cs">
       <DependentUpon>201509110838465_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509141503330_PriceRenamingAndTaxType.cs" />
+    <Compile Include="Migrations\201509141503330_PriceRenamingAndTaxType.Designer.cs">
+      <DependentUpon>201509141503330_PriceRenamingAndTaxType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509141549134_ManualTotal.cs" />
+    <Compile Include="Migrations\201509141549134_ManualTotal.Designer.cs">
+      <DependentUpon>201509141549134_ManualTotal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\AddressEntity.cs" />
     <Compile Include="Model\AttachmentEntity.cs" />
@@ -70,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IQuoteRepository.cs" />
     <Compile Include="Repositories\QuoteRepositoryImpl.cs" />
+    <Compile Include="Services\DefaultQuoteTotalsCalculator.cs" />
     <Compile Include="Services\QuoteRequestServiceImpl.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +103,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201509110838465_Initial.resx">
       <DependentUpon>201509110838465_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509141503330_PriceRenamingAndTaxType.resx">
+      <DependentUpon>201509141503330_PriceRenamingAndTaxType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509141549134_ManualTotal.resx">
+      <DependentUpon>201509141549134_ManualTotal.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
