Quotes add API method for shipment methods  for choosing and ManualShippintTotal field Platform -  add  isolation and prevent conflict module css to another modules

--- a/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Migrations\201509161439413_ExtraFields.Designer.cs">
       <DependentUpon>201509161439413_ExtraFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509171029169_ManualShippingTotal.cs" />
+    <Compile Include="Migrations\201509171029169_ManualShippingTotal.Designer.cs">
+      <DependentUpon>201509171029169_ManualShippingTotal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\AddressEntity.cs" />
     <Compile Include="Model\AttachmentEntity.cs" />
@@ -119,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509161439413_ExtraFields.resx">
       <DependentUpon>201509161439413_ExtraFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509171029169_ManualShippingTotal.resx">
+      <DependentUpon>201509171029169_ManualShippingTotal.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
