--- a/VirtoCommerce.QuoteModule.Web/VirtoCommerce.QuoteModule.Web.csproj
+++ b/VirtoCommerce.QuoteModule.Web/VirtoCommerce.QuoteModule.Web.csproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="Content\logo.png" />
     <Content Include="Localizations\en.VirtoCommerce.Quote.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
