--- a/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -76,7 +76,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="VirtoCommerce.Platform.Core, Version=2.10.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\VirtoCommerce.Platform.Core.2.10.2\lib\net451\VirtoCommerce.Platform.Core.dll</HintPath>
+      <HintPath>..\packages\VirtoCommerce.Platform.Core.2.10.3\lib\net451\VirtoCommerce.Platform.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="VirtoCommerce.Platform.Data, Version=2.10.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -122,6 +122,7 @@
     <Compile Include="Model\TierPriceEntity.cs" />
     <Compile Include="Observers\LogQuoteChangesObserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\CommonAssemblyInfo.cs" />
     <Compile Include="Repositories\IQuoteRepository.cs" />
     <Compile Include="Repositories\QuoteRepositoryImpl.cs" />
     <Compile Include="Services\DefaultQuoteTotalsCalculator.cs" />
