--- a/VirtoCommerce.QuoteModule.Web/VirtoCommerce.QuoteModule.Web.csproj
+++ b/VirtoCommerce.QuoteModule.Web/VirtoCommerce.QuoteModule.Web.csproj
@@ -138,6 +138,7 @@
     <None Include="app.config" />
     <Content Include="Content\logo.png" />
     <Content Include="Localizations\en.VirtoCommerce.Quote.json" />
+    <Content Include="Localizations\de.VirtoCommerce.Quote.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
