--- a/VirtoCommerce.QuoteModule.Web/packages.config
+++ b/VirtoCommerce.QuoteModule.Web/packages.config
@@ -7,12 +7,13 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="Unity" version="4.0.1" targetFramework="net451" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net451" />
   <package id="VirtoCommerce.Domain" version="2.17.0" targetFramework="net451" />
-  <package id="VirtoCommerce.Module" version="0.9.0" targetFramework="net451" developmentDependency="true" />
-  <package id="VirtoCommerce.Platform.Core" version="2.12.0" targetFramework="net451" />
+  <package id="VirtoCommerce.Module" version="0.17.0" targetFramework="net461" developmentDependency="true" />
+  <package id="VirtoCommerce.Platform.Core" version="2.13.15" targetFramework="net461" />
   <package id="VirtoCommerce.Platform.Core.Web" version="2.12.0" targetFramework="net451" />
   <package id="VirtoCommerce.Platform.Data" version="2.12.0" targetFramework="net451" />
 </packages>
