--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-    </PropertyGroup>
-    <ItemGroup>
-      <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.0.2" />
-      <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.0.2" />
-      <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.0.2" />
-      <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.0.0-rc6-preview001" />
-      <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.0.1" />
-    </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.1.0" />
+    <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.1.0" />
+    <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.1.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.0.0" />
+    <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.1.0" />
+  </ItemGroup>
 </Project>
