--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -1,12 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.1.0" />
-    <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.1.0" />
-    <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.1.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.5.0" />
-    <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.1.0" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <noWarn>1591</noWarn>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+        <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.1.0" />
+        <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.1.0" />
+        <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.1.0" />
+        <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.5.0" />
+        <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.1.0" />
+    </ItemGroup>
 </Project>
