--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <noWarn>1591</noWarn>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -9,10 +9,10 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-        <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.1.0" />
-        <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.1.0" />
-        <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.22.0" />
-        <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.81.0" />
-        <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.1.0" />
+        <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.200.0" />
+        <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.200.0" />
+        <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.200.0" />
+        <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.200.0" />
+        <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.200.0" />
     </ItemGroup>
 </Project>
