--- a/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -7,6 +7,10 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
+    <PropertyGroup>
+        <!-- Project is not a test project -->
+        <SonarQubeTestProject>false</SonarQubeTestProject>
+    </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Hangfire.Core" Version="1.7.14" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
