Fix publish nuget workflow

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -20,12 +20,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '6.0.x'
-
       - name: Install VirtoCommerce.GlobalTool
-        run: dotnet tool install --global VirtoCommerce.GlobalTool
+        run: dotnet tool install --global VirtoCommerce.GlobalTool --version 2.1.0-alpha.17
 
       - name: Get changelog
         id: changelog
