PT-9259: Move GraphQL from XQuote module (#67)
* Move quote converter from XQuote module

* Move GraphQL from XQuote module

* Fix code smell

--- a/src/VirtoCommerce.QuoteModule.Web/VirtoCommerce.QuoteModule.Web.csproj
+++ b/src/VirtoCommerce.QuoteModule.Web/VirtoCommerce.QuoteModule.Web.csproj
@@ -13,6 +13,8 @@
     <None Remove="dist\**" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Data\VirtoCommerce.QuoteModule.Data.csproj" />
+    <ProjectReference Include="..\VirtoCommerce.QuoteModule.ExperienceApi\VirtoCommerce.QuoteModule.ExperienceApi.csproj" />
   </ItemGroup>
 </Project>
