--- a/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
+++ b/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
@@ -15,7 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.233.0" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.259.0-alpha.1097-pt-10888" />
     <PackageReference Include="VirtoCommerce.XPurchase" Version="3.233.0" />
   </ItemGroup>
 
