--- a/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.877.0" />
     <PackageReference Include="VirtoCommerce.Platform.Hangfire" Version="3.877.0" />
     <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.813.0-alpha.720-vcst-2821" />
+    <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.813.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
