--- a/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -13,10 +13,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.877.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Hangfire" Version="3.877.0" />
-    <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.802.0" />
-    <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.813.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.916.0-alpha.13164-vcst-4203-cleanup" />
+    <PackageReference Include="VirtoCommerce.Platform.Hangfire" Version="3.916.0-alpha.13164-vcst-4203-cleanup" />
+    <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.816.0-alpha.232-vcst-4203-cleanup" />
+    <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.823.0-alpha.763-vcst-4203-cleanup" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
